--- a/springcloud-demo-pom/pom.xml
+++ b/springcloud-demo-pom/pom.xml
@@ -26,6 +26,11 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.54</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -41,5 +46,6 @@
     <module>../springcloud-demo-mvcservice</module>
     <module>../springcloud-demo-eurekaservice</module>
     <module>../springcloud-demo-eurekaclient1</module>
+    <module>../springcloud-demo-zuul</module>
   </modules>
 </project>
