--- a/springcloud-demo-config-server/src/main/resources/application.properties
+++ b/springcloud-demo-config-server/src/main/resources/application.properties
@@ -5,10 +5,16 @@ server.port=8084
 # spring 静态资源扫描路径
 spring.resources.static-locations=classpath:/static/
 
+#
+#spring.cloud.config.server.git.uri=https://github.com/516516/springCloudConfigCenter/
+#spring.cloud.config.server.git.searchPaths=respo
+#spring.cloud.config.label=master
+#spring.cloud.config.server.git.username=
+#spring.cloud.config.server.git.password=
 
-spring.cloud.config.server.git.uri=https://github.com/516516/springCloudConfigCenter/
-spring.cloud.config.server.git.searchPaths=respo
+spring.cloud.config.server.git.uri=https://github.com/516516/springcloud-demo
+spring.cloud.config.server.git.searchPaths=springcloud-demo-config-git/config
 spring.cloud.config.label=master
-spring.cloud.config.server.git.username=
-spring.cloud.config.server.git.password=
+spring.cloud.config.server.git.username=516516
+spring.cloud.config.server.git.password=wlr102102
 
