项目搭建-框架熟悉阶段

--- a/springcloud-demo-config-server/src/main/resources/application.properties
+++ b/springcloud-demo-config-server/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.cloud.config.server.git.searchPaths=springcloud-demo-config-git/config
 spring.cloud.config.label=master
 spring.cloud.config.server.git.username=516516
 spring.cloud.config.server.git.password=wlr102102
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
