--- a/springcloud-demo-mvcservice/src/main/resources/bootstrap.yml
+++ b/springcloud-demo-mvcservice/src/main/resources/bootstrap.yml
@@ -26,7 +26,13 @@ spring:
       profile: dev
       uri: http://localhost:8084/
       port: 8084
+      discovery:
+        enabled: true
+        service-id: springcloud-demo-config-server
 
+  # 链路追踪
+  zipkin:
+    base-url: http://localhost:9411
 
 server:
   port: 8080
@@ -48,3 +54,11 @@ feign:
     enabled: true
 
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+      cors:
+        allowed-origins: "*"
+        allowed-methods: "*"
