--- a/springcloud-demo-pom/pom.xml
+++ b/springcloud-demo-pom/pom.xml
@@ -49,5 +49,6 @@
     <module>../springcloud-demo-zuul</module>
     <module>../springcloud-demo-config-server</module>
     <module>../springcloud-demo-config-git</module>
+    <module>../springcloud-demo-trubine</module>
   </modules>
 </project>
