项目搭建-框架熟悉阶段

--- a/springcloud-demo-pom/pom.xml
+++ b/springcloud-demo-pom/pom.xml
@@ -50,5 +50,6 @@
     <module>../springcloud-demo-config-server</module>
     <module>../springcloud-demo-config-git</module>
     <module>../springcloud-demo-trubine</module>
+    <module>../springcloud-demo-gateway</module>
   </modules>
 </project>
